# MameVfxFrontPanel

./: BuildLayout.py  CMakeLists.txt  CMakePresets.json  FrontPanel.html  FrontPanel.js  LICENSE.md  README.md  View.html  View.js  hiding script exploration.lua  main.cpp  slider_library.lua
build_panel/: FrontPanel.js  README.md  build_panel.py  js_html.py  keyboard.py  mame_layout.py  mame_layout_script.lua  myxml.py  panel.py  rect.py
build_view/: README.md  View.js  build_view.py  js_html.py  keyboard.py  mame_layout.py  mame_layout_script.lua  util.py  view.py
